[package]
name = "rosu-pp-js"
version = "2.0.0-alpha.10"
edition = "2021"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MaxOhn/rosu-pp-js"
description = "Difficulty and performance calculation for osu!"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.69"
rosu-mods = { git = "https://github.com/MaxOhn/rosu-mods", branch = "main", features = ["serde"] }
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", branch = "pp-update" }

serde = { version = "1.0.197", features = ["derive"] }
wasm-bindgen = "0.2.95"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
